samples/_failures_safe/1761423401_8e1888_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_161260aa.c: In function ‘main’:
./samples/SAFE/__tmp_161260aa.c:155:16: error: missing terminating " character
  155 |         printf("Invalid matrix input
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_161260aa.c:155:9: error: expected expression at end of input
  155 |         printf("Invalid matrix input
      |         ^~~~~~
./samples/SAFE/__tmp_161260aa.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_161260aa.c:155:9: error: expected declaration or statement at end of input
